--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,6 +43,7 @@
     <dimen name="width_navigation_icon">16dp</dimen>
     <dimen name="height_navigation_icon">16dp</dimen>
     <dimen name="margin_medium_4_n">22dp</dimen>
+    <dimen name="margin_medium_4_n_2x">46dp</dimen>
     <dimen name="margin_card_medium_1_n">10dp</dimen>
     <dimen name="width_detail_poster">140dp</dimen>
     <dimen name="height_detail_poster">180dp</dimen>
@@ -52,4 +53,18 @@
     <dimen name="width_btn_share_movies_details">24dp</dimen>
     <dimen name="height_btn_share_movies_details">24dp</dimen>
     <dimen name="height_btn_back_movies_details">24dp</dimen>
+    <dimen name="width_back_arrow_cinema">24dp</dimen>
+    <dimen name="height_back_arrow_cinema">24dp</dimen>
+    <dimen name="margin_top_30">30dp</dimen>
+    <dimen name="width_dot">8dp</dimen>
+    <dimen name="height_dot">8dp</dimen>
+    <dimen name="margin_10dp">10dp</dimen>
+    <dimen name="margin_17dp">17dp</dimen>
+    <dimen name="width_imdb_logo">44dp</dimen>
+    <dimen name="height_imdb_logo">28dp</dimen>
+    <dimen name="width_movie_title">150dp</dimen>
+    <dimen name="height_chip">40dp</dimen>
+    <dimen name="margin_34dp">34dp</dimen>
+    <dimen name="padding_9dp">9dp</dimen>
+    <dimen name="size_icon_notification">18dp</dimen>
 </resources>
