--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="RoundedAlertDialog" parent="ThemeOverlay.MaterialComponents.Dialog">
         <item name="colorSurface">@android:color/darker_gray</item>
         <item name="shapeAppearanceOverlay">@style/DialogRoundedCorner</item>
@@ -38,5 +39,21 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">20sp</item>
         <item name="fontFamily">@font/inter</item>
+    </style>
+
+
+    // Text Styles
+    <style name="TextInterWhiteBold16sp">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/inter_bold</item>
+    </style>
+
+    // Paddings
+    <style name="PaddingFilmTypes">
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingStart">13dp</item>
+        <item name="android:paddingEnd">13dp</item>
     </style>
 </resources>
