--- a/app/src/main/res/layout/fragment_movies_cinema.xml
+++ b/app/src/main/res/layout/fragment_movies_cinema.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.fragments.movies.ChooseCinemaFragment">
+    tools:context=".ui.fragments.movies.MoviesCinemaFragment">
 
     <include
         android:id="@+id/appBarMoviesCinema"
-        layout="@layout/layout_app_bar_home_cinema" />
+        layout="@layout/layout_app_bar_movies_cinema" />
 
     <View
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/rvDatesCardsMoviesCinema"
-                android:layout_marginTop="@dimen/margin_top_30"
+                android:layout_marginTop="@dimen/margin_30dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -109,10 +109,11 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/llSeatAvailable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/llFilmTypesMoviesCinema"
-                android:layout_marginTop="@dimen/margin_top_30"
+                android:layout_marginTop="@dimen/margin_30dp"
                 android:background="@color/colorSeatBackground"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal"
@@ -195,10 +196,12 @@
 
             </LinearLayout>
 
-
-
-
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvCinemasMoviesCinema"
+                android:layout_width="match_parent"
+                tools:listitem="@layout/view_holder_movies_cinema_cinemas_list"
+                android:layout_below="@+id/llSeatAvailable"
+                android:layout_height="match_parent"/>
 
         </RelativeLayout>
 
