--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="colorOrange">#FF7A00</color>
     <color name="colorGreen">#00FFA3</color>
     <color name="colorPurple">#FF00B8</color>
+    <color name="colorCinemaStuff">#AAAAAA</color>
 </resources>
