--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,6 +49,18 @@
         <item name="fontFamily">@font/inter_bold</item>
     </style>
 
+    <style name="TextInterWhiteSemiBold16sp">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/inter_semibold</item>
+    </style>
+
+    <style name="TextInterWhiteSemiBold14sp">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/inter_semibold</item>
+    </style>
+
     // Paddings
     <style name="PaddingFilmTypes">
         <item name="android:paddingTop">5dp</item>
